--- a/aplicativoTourGemeas/app/src/main/res/layout/activity_tela_mapa.xml
+++ b/aplicativoTourGemeas/app/src/main/res/layout/activity_tela_mapa.xml
@@ -8,21 +8,28 @@
     tools:context=".TelaMapa">
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/grdPrincipal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@id/mapView"
-        app:layout_constraintEnd_toStartOf="@+id/mapView"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <org.osmdroid.views.MapView
-            android:id="@+id/mapView"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="662dp">
+            android:layout_height="681dp"
+            android:orientation="vertical">
 
-        </org.osmdroid.views.MapView>
+            <org.osmdroid.views.MapView
+                android:id="@+id/mapView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            </org.osmdroid.views.MapView>
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
