--- a/tourApp/tour-cidades-gemeas/app/src/main/res/layout/activity_criar_conta.xml
+++ b/tourApp/tour-cidades-gemeas/app/src/main/res/layout/activity_criar_conta.xml
@@ -22,13 +22,13 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:text="Criar Conta"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.5" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView6"
@@ -37,17 +37,18 @@
         android:src="@drawable/projeto_criador_de_logotipo__1__1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.138" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Endereço de Email"
+        app:layout_constraintBottom_toTopOf="@+id/editEnderecoEmail"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.176"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imageView6"
-        app:layout_constraintHorizontal_bias="0.1" />
+        app:layout_constraintTop_toBottomOf="@id/imageView6" />
 
     <EditText
         android:id="@+id/editEnderecoEmail"
@@ -65,10 +66,10 @@
         android:id="@+id/textUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="52dp"
         android:text="Usuário"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/editEnderecoEmail"
-        app:layout_constraintHorizontal_bias="0.1" />
+        app:layout_constraintTop_toBottomOf="@id/editEnderecoEmail" />
 
     <EditText
         android:id="@+id/editNameUser"
@@ -86,10 +87,10 @@
         android:id="@+id/textPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="52dp"
         android:text="Senha"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/editNameUser"
-        app:layout_constraintHorizontal_bias="0.1" />
+        app:layout_constraintTop_toBottomOf="@id/editNameUser" />
 
     <EditText
         android:id="@+id/editTextSenha"
@@ -104,37 +105,31 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <CheckBox
-        android:id="@+id/checkBoxMostrarSenha"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Mostrar Senha"
-        app:layout_constraintStart_toEndOf="@id/editTextSenha"
-        app:layout_constraintTop_toTopOf="@id/editTextSenha" />
-
-    <CheckBox
         android:id="@+id/checkBox"
         android:layout_width="339dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
         android:text="Eu concordo com as Condições de Utilização e Políticas de Privacidade"
         android:textColor="#666666"
-        app:layout_constraintTop_toBottomOf="@id/editTextSenha"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.722"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/editTextSenha" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/CriarConta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        
-        android:layout_marginTop="32dp"
+        android:layout_marginBottom="28dp"
+        app:cornerRadius="10dp"
+        android:backgroundTint="#189A46"
         android:text="Criar Conta"
         android:textColor="#F9FBFB"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/checkBox"
-        />
+
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
