--- a/tourApp/tour-cidades-gemeas/app/src/main/res/layout/activity_tela_principal.xml
+++ b/tourApp/tour-cidades-gemeas/app/src/main/res/layout/activity_tela_principal.xml
@@ -29,6 +29,12 @@
             android:textColor="#FFFFFF"
             android:textSize="18sp"
             android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="48dp"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/menu_24dp_e3e3e3_fill0_wght400_grad0_opsz24" />
     </FrameLayout>
 
 
