--- a/tourApp/tour-cidades-gemeas/app/src/main/res/layout/activity_enigma.xml
+++ b/tourApp/tour-cidades-gemeas/app/src/main/res/layout/activity_enigma.xml
@@ -47,7 +47,7 @@
             android:orientation="vertical"
             android:padding="15dp">
 
-            <!-- Primeiro Card -->
+
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -100,6 +100,8 @@
                     android:layout_height="match_parent"
                     android:background="#DAE2DA"
                     android:orientation="vertical"
+                    android:clickable="true"
+                    android:focusable="true"
                     android:padding="12dp">
 
                     <TextView
