--- a/tourApp/tour-cidades-gemeas/app/src/main/res/layout/activity_loguin.xml
+++ b/tourApp/tour-cidades-gemeas/app/src/main/res/layout/activity_loguin.xml
@@ -79,7 +79,7 @@
         app:strokeWidth="2dp" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnRegistrar"
 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
