--- a/tourApp/tour-cidades-gemeas/app/src/main/res/layout/activity_tela_principal.xml
+++ b/tourApp/tour-cidades-gemeas/app/src/main/res/layout/activity_tela_principal.xml
@@ -38,14 +38,13 @@
     </FrameLayout>
 
 
+
+
     <FrameLayout
-        android:id="@+id/content_container"
+        android:id="@+id/content_frame"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:visibility="visible"
-        tools:visibility="visible" />
-
+        android:layout_weight="1" />
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
@@ -56,5 +55,6 @@
         app:tabIndicatorColor="@color/black"
         app:tabSelectedTextColor="@color/black"
         app:tabTextColor="@color/blue" />
+
 
 </LinearLayout>
