--- a/tourApp/tour-cidades-gemeas/app/src/main/res/layout/activity_dicas_enigmas.xml
+++ b/tourApp/tour-cidades-gemeas/app/src/main/res/layout/activity_dicas_enigmas.xml
@@ -90,13 +90,12 @@
                 android:id="@+id/textView6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#000000"
-                android:text="Dica 1"
-                android:textStyle="bold"
-                android:textSize="16sp"
                 android:layout_marginTop="8dp"
-                android:layout_marginBottom="4dp" />
-
+                android:layout_marginBottom="4dp"
+                android:text="Dica 1"
+                android:textColor="#000000"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/dica1_text"
@@ -115,6 +114,7 @@
                 android:orientation="horizontal"
                 android:gravity="center"
                 android:layout_marginTop="15dp">
+
 
                 <Button
                     android:id="@+id/inicarAventura"
@@ -138,7 +138,7 @@
                     android:textColor="#01AA4F"
                     app:cornerRadius="10dp"
                     app:strokeColor="#189A46"
-                    app:strokeWidth="2dp" />/>
+                    app:strokeWidth="2dp" />
             </LinearLayout>
 
 
