--- a/tourApp/tour-cidades-gemeas/app/src/main/res/layout/activity_iniciar_sessao.xml
+++ b/tourApp/tour-cidades-gemeas/app/src/main/res/layout/activity_iniciar_sessao.xml
@@ -27,8 +27,8 @@
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="match_parent"
-                android:layout_height="27dp"
-                android:layout_marginTop="16dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
                 android:text="Iniciar sessão"
                 android:textAlignment="center"
                 android:textColor="#FFFFFF"
