--- a/tourApp/tour-cidades-gemeas/app/src/main/res/layout/activity_dicas_enigmas.xml
+++ b/tourApp/tour-cidades-gemeas/app/src/main/res/layout/activity_dicas_enigmas.xml
@@ -138,7 +138,7 @@
                     android:textColor="#01AA4F"
                     app:cornerRadius="10dp"
                     app:strokeColor="#189A46"
-                    app:strokeWidth="2dp" />/>
+                    app:strokeWidth="2dp" />
             </LinearLayout>
 
 
