--- a/tourApp/tour-cidades-gemeas/app/src/main/res/layout/activity_enigma.xml
+++ b/tourApp/tour-cidades-gemeas/app/src/main/res/layout/activity_enigma.xml
@@ -24,12 +24,12 @@
             android:text="Enigmas"
             android:gravity="center"
             android:textColor="#FFFFFF"
-            android:textSize="18sp"
+            android:textSize="25sp"
             android:textStyle="bold" />
 
         <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="48dp"
+            android:id="@+id/menuHamburguer"
+            android:layout_width="50dp"
             android:layout_height="match_parent"
             app:srcCompat="@drawable/menu_24dp_e3e3e3_fill0_wght400_grad0_opsz24" />
     </FrameLayout>
