--- a/tourApp/tour-cidades-gemeas/app/src/main/res/layout/activity_cuidado.xml
+++ b/tourApp/tour-cidades-gemeas/app/src/main/res/layout/activity_cuidado.xml
@@ -35,24 +35,22 @@
 
     <ImageView
         android:id="@+id/imageView5"
-        android:layout_width="370dp"
-        android:layout_height="385dp"
+        android:layout_width="391dp"
+        android:layout_height="395dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.39"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/dddddd"
-        tools:layout_editor_absoluteY="88dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.364"
+        app:srcCompat="@drawable/dddddd" />
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="298dp"
-        android:layout_height="54dp"
-        android:text="Tal como qualquer atividade ao ar livre,
-o Tour Cidade Gêmeas
-pode ser perigoso.
-Preste
- atenção ao que rodeia enquanto joga."
-        android:textSize="10sp"
+        android:layout_width="311dp"
+        android:layout_height="144dp"
+        android:text="Tal como qualquer atividade ao ar livre,o Tour Cidade Gêmeas pode ser perigoso.Preste atenção ao que rodeia enquanto joga."
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
@@ -61,7 +59,7 @@ Preste
         app:layout_constraintVertical_bias="0.614" />
 
     <Button
-        android:id="@+id/btnIniciarSessao"
+        android:id="@+id/BtnCompreendo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#189A46"
